attempting to fix zoom issue on iPhone.

--- a/defaults.css
+++ b/defaults.css
@@ -35,7 +35,7 @@ img {
 	visibility: hidden;
 }
 
-#top {
+.topFloat {
 	position: fixed;
 	margin: 0px;
 	height: 100%;
@@ -45,8 +45,21 @@ img {
 
 	z-index: 1000;
 	background: #e2e2e2;
+	overflow-y: hidden;
+}
 
-	visibility: hidden;
+.topScroll {
+	position: fixed;
+	top: 0px;
+	left: 0px;
+	width: 100%;
+	height: 100%;
+	opacity: 100%;
+	z-index: 1000;
+	background: #e2e2e2;
+	margin-left: 0;
+	margin-top: 0;
+	overflow-y: scroll;
 }
 
 .cleanTable {
