--- a/works.css
+++ b/works.css
@@ -82,7 +82,6 @@
 	
 	width: 780px;
 	height: 100%;
-	overflow-y: scroll;
 	overflow-x: none;
 }
 
